fix(frontend/scrollbar): stable scrollbar gutter

--- a/apps/frontend/src/app/globals.css
+++ b/apps/frontend/src/app/globals.css
@@ -161,44 +161,7 @@
   }
 }
 
-*::-webkit-scrollbar {
-  width: 0.6rem;
-  height: 0.6rem;
+html,
+body {
+  scrollbar-gutter: stable both-edges;
 }
-
-*::-webkit-scrollbar-track {
-  background: oklch(from var(--card) calc(l * 1.25) c h);
-  border-radius: 5px;
-}
-*::-webkit-scrollbar-track:hover {
-  background: oklch(from var(--card) calc(l * 1.5) c h / 0.1);
-  border-radius: 5px;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: oklch(from var(--brand-primary) calc(l * 1.1) c h / 0.25);
-  border-radius: 0.5rem;
-  border: 3.5px solid oklch(from var(--card) calc(l * 1.5) c h);
-  transition:
-    background-color 2s ease-in-out,
-    border 2s ease-in-out;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: oklch(from var(--brand-primary) calc(l * 1.1) c h / 0.55);
-  border: 2.5px solid oklch(from var(--card) calc(l * 1.5) c h);
-  transition:
-    background-color 0.8s ease-in-out,
-    border 2s ease-in-out;
-}
-
-html {
-  overflow-x: hidden;
-  margin-right: calc(-1 * (100vw - 100%));
-}
-
-/* 
-* {
-  scrollbar-width: 0.25rem;
-  scrollbar-color: oklch( from var(--brand-primary) calc(l * 1.1)  c h) oklch( from var(--card) calc(l * 1.3)  c h);
-} */
